<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    tools:content=".LogActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-6dp"
        android:src="@drawable/ent1" />

    <EditText
        android:id="@+id/mailAndPhone"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="281dp"
        android:background="@drawable/border"
        android:fontFamily="@font/inter_medium"
        android:gravity="top"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/mail"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/border"
        android:fontFamily="@font/inter_medium"
        android:gravity="top"
        android:nestedScrollingEnabled="false"
        android:paddingLeft="11dp"
        android:paddingTop="15dp"
        android:text="@string/password"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="20dp" />

    <Button
        android:id="@+id/LogButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignStart="@+id/RegButton"


        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="138dp"
        android:background="@drawable/border_log"
        android:elegantTextHeight="true"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter_medium"
        android:hapticFeedbackEnabled="true"
        android:linksClickable="true"
        android:nestedScrollingEnabled="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/RegButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="77dp"

        android:background="@drawable/border_reg"
        android:elegantTextHeight="true"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter_medium"
        android:hapticFeedbackEnabled="true"
        android:linksClickable="true"
        android:nestedScrollingEnabled="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/registration"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="134dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="207dp"

        android:background="@drawable/border_sber"
        android:layout_marginLeft="55dp"
        android:elegantTextHeight="true"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter_medium"
        android:hapticFeedbackEnabled="true"
        android:linksClickable="true"
        android:nestedScrollingEnabled="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/black" />

    <Button
        android:id="@+id/regButton2"
        android:layout_width="134dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="207dp"

        android:background="@drawable/border_yandex"
        android:elegantTextHeight="true"
        android:layout_marginRight="55dp"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/inter_medium"
        android:hapticFeedbackEnabled="true"
        android:linksClickable="true"
        android:nestedScrollingEnabled="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/imageView4"
        android:layout_width="303dp"
        android:layout_height="69dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/lexend_medium"
        android:text="@string/LogName"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/imageView5"
        android:layout_width="89dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="201dp"
        android:fontFamily="@font/lexend_extrabold"
        android:text="@string/log"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/imageView6"
        android:layout_width="46dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="187dp"
        android:layout_marginTop="420dp"
        android:fontFamily="@font/lexend_extrabold"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20dp" />


</RelativeLayout>